# tau

./: Cargo.toml
src/: lib.rs  main.rs
src/agent/: config.rs  events.rs  mod.rs
src/context/: compressor.rs  history.rs  mod.rs  policy.rs  tokenizer.rs
src/harness/: mod.rs  policy.rs  sandbox.rs
src/llm/: mod.rs  openai.rs  types.rs
src/orchestrator/: mod.rs
src/tools/: bash.rs  glob.rs  grep.rs  mod.rs  read_file.rs  write_file.rs
tasks/: README.md  phase-1-scaffold.md  phase-2-context.md  phase-3-tools.md  phase-4-streaming.md  phase-5-multiagent.md
