[package]
name = "tau"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tau"
path = "src/main.rs"

[dependencies]
tokio          = { version = "1",    features = ["full"] }
reqwest        = { version = "0.12", features = ["json", "stream"] }
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"
anyhow         = "1"
async-trait    = "0.1"
clap           = { version = "4",    features = ["derive", "env"] }
futures        = "0.3"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid           = { version = "1",    features = ["v4"] }
chrono         = { version = "0.4",  features = ["serde"] }
regex          = "1"
glob           = "0.3"
dashmap        = "6"
tokio-util     = { version = "0.7",  features = ["codec", "io"] }
bytes          = "1"
walkdir        = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "user", "signal"] }

[features]
default   = []
docker    = ["bollard"]
k8s       = ["kube", "k8s-openapi"]

[dependencies.bollard]
version  = "0.17"
optional = true

[dependencies.kube]
version  = "0.91"
features = ["runtime", "derive"]
optional = true

[dependencies.k8s-openapi]
version  = "0.22"
features = ["v1_29"]
optional = true
